[package]
name = "wbp"
version = "0.1.0"
edition = "2024"

[dependencies]
ego-tree = "0.10.0"
scraper = "0.23.1"
softbuffer = "0.4.6"
tiny-skia = "0.11.4"
url = "2.5.4"
winit = "0.30"
log = "0.4.27"
env_logger = "0.11.8"

[patch.crates-io]
ego-tree = { git = 'https://github.com/remimimimimi/ego-tree.git', branch = "node-mut-traverse" }

[profile.dev]
opt-level = 1
