[workspace]
resolver = "2"
members = [
    "crates/*"
]


[package]
name = "wbp"
version = "0.1.0"
edition = "2024"

[dependencies]
url = "2.5.4"
sealed = "0.6.0"
log = "0.4.27"
env_logger = "0.11.8"

# CSS and HTML
cssparser = "0.35.0"
ego-tree = "0.10.0"
html5ever = "0.31.0"
precomputed-hash = "0.1.1"
selectors = "0.27.0"
tendril = "0.4.3"
css-macros = { path = "crates/css-macros" }

# Window creation
winit = "0.30"

# Rendering
tiny-skia = "0.11.4"
softbuffer = "0.4.6"

# Text rendering
parley = "0.3.0"
skrifa = "0.30.0"

[features]
default = ["errors"]
errors = []

[patch.crates-io]
ego-tree = { git = 'https://github.com/remimimimimi/ego-tree.git', branch = "node-mut-traverse" }

[profile.dev]
opt-level = 1
