[package]
name = "css-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
json5 = "0.4.1"
litrs = "0.4.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"]}
css-vds-parser = { path = "../css-vds-parser" }
chumsky = "0.10.1"
syn = { version = "2.0.100", features = ["full"]}
prettyplease = "0.2.32"
